fixed long word overflow bug

--- a/css/style.css
+++ b/css/style.css
@@ -474,3 +474,8 @@ body {
     height: 12px;
   }
 }
+
+#goal-setting-page label {
+  overflow-wrap: break-word;
+}
+
